--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 #main-nav {
   background-color: white;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .nav-item {
@@ -9,10 +9,14 @@
 }
 
 .nav-link {
-  color: black;
+  color: #5c6f00;
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
+}
+
+.nav-link:hover {
+  color: #9fb14c;
 }
 
 .nav-brand {
@@ -21,7 +25,8 @@
 }
 
 .logo {
-  margin-top: 25px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #maincarousel {
@@ -44,6 +49,7 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 60px;
   text-align: left;
+  color: #5c6f00;
 }
 
 .text-caption {
@@ -53,8 +59,7 @@
 }
 
 .button {
-background-color: black;
-opacity: 0.8;
+background-color: #8a643b;
 border: none;
 color: white;
 padding: 18px 18px;
@@ -68,6 +73,10 @@ margin: 4px 2px;
 cursor: pointer;
 }
 
+.button:hover {
+  opacity: 0.8;
+}
+
 .row {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -75,6 +84,7 @@ cursor: pointer;
 
 .card {
   border-width: medium;
+  border-color: #8a643b;
 }
 
 .card-body {
@@ -97,4 +107,56 @@ cursor: pointer;
   margin-top: 30px;
   margin-bottom: 20px;
   font-family: 'Montserrat', sans-serif;
+}
+
+#form-section {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 30px;
+  background-color: #9fb14c;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.form-header {
+  padding-bottom: 10px;
+  text-align: center;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+}
+
+input[type=name], input[type=email], input[type=password], input [type=checkbox] {
+  padding: 2px;
+  padding-left: 8px;
+  margin: 0;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  font-size: 15px;
+  font-family: 'Montserrat', sans-sans-serif;
+}
+
+.signup-form {
+  display: block;
+  text-align: center;
+}
+
+form {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  color: white;
+  font-size: 15px;
+}
+
+.btn-primary {
+  background-color: #8a643b;
+  border: none;
+  color: white;
+  font-size: 15px;
+}
+
+.btn:hover {
+  background-color: #8a643b;
+  opacity: 0.8;
 }
