--- a/css/styles.css
+++ b/css/styles.css
@@ -42,19 +42,24 @@
 .carousel-caption {
   color: black;
   max-width: 500px;
+  background-color: white;
+  opacity: 0.8;
+  padding-left: 30px;
+  padding-right: 30px;
+  height: 300px;
 }
 
 .headline-caption {
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
-  font-size: 60px;
+  font-size: 35px;
   text-align: left;
   color: #5c6f00;
 }
 
 .text-caption {
   font-family: 'Montserrat', sans-serif;
-  font-size: 25px;
+  font-size: 18px;
   text-align: left;
 }
 
@@ -77,8 +82,17 @@ cursor: pointer;
   opacity: 0.8;
 }
 
+.instructions {
+    text-transform: uppercase;
+    font-size: 30px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    padding-top: 10px;
+    color: #5c6f00
+}
+
 .row {
-  padding-top: 40px;
+  padding-top: 30px;
   padding-bottom: 40px;
 }
 
@@ -101,6 +115,7 @@ cursor: pointer;
   font-size: 20px;
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
+  color: #5c6f00;
 }
 
 .card-content {
