--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,20 @@
 #main-nav {
-  background-color: white;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
+body /* Whole page CSS */{
+  border: 30px solid white;
+}
+
 .nav-item {
-  margin-top: 55px;
+  margin-top: 10px;
 }
 
 .nav-link {
-  color: #5c6f00;
+  color: black;
   text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
-}
-
-.nav-link:hover {
-  color: #9fb14c;
 }
 
 .nav-brand {
@@ -24,13 +22,7 @@
   margin-right: 50px;
 }
 
-.logo {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
 #maincarousel {
-  margin-top: 30px;
   margin-bottom: 30px;
 }
 
@@ -51,31 +43,28 @@
 
 .headline-caption {
   text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
   font-size: 35px;
   text-align: left;
   color: #5c6f00;
 }
 
 .text-caption {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
+  font-size: 15px;
   text-align: left;
 }
 
 .button {
-background-color: #8a643b;
-border: none;
-color: white;
-padding: 18px 18px;
-text-align: center;
-text-decoration: none;
-display: flex;
-font-size: 15px;
-font-family: 'Montserrat', sans-serif;
-text-transform: uppercase;
-margin: 4px 2px;
-cursor: pointer;
+  background-color: #8a643b;
+  border: none;
+  color: white;
+  padding: 15px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  font-size: 15px;
+  text-transform: uppercase;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -86,7 +75,6 @@ cursor: pointer;
     text-transform: uppercase;
     font-size: 30px;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
     padding-top: 10px;
     color: #5c6f00
 }
@@ -114,17 +102,15 @@ cursor: pointer;
   margin-top: 40px;
   font-size: 20px;
   text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
   color: #5c6f00;
 }
 
 .card-content {
   margin-top: 30px;
   margin-bottom: 20px;
-  font-family: 'Montserrat', sans-serif;
 }
 
-#form-section {
+.form-section {
   margin-left: 0;
   margin-right: 0;
   margin-top: 30px;
@@ -137,7 +123,6 @@ cursor: pointer;
   padding-bottom: 10px;
   text-align: center;
   color: white;
-  font-family: 'Montserrat', sans-serif;
 }
 
 input[type=name], input[type=email], input[type=password], input [type=checkbox] {
@@ -147,7 +132,6 @@ input[type=name], input[type=email], input[type=password], input [type=checkbox]
   border: 1px solid #ccc;
   box-sizing: border-box;
   font-size: 15px;
-  font-family: 'Montserrat', sans-sans-serif;
 }
 
 .signup-form {
@@ -174,4 +158,129 @@ form {
 .btn:hover {
   background-color: #8a643b;
   opacity: 0.8;
+}
+
+/*Lizzies' code*/
+
+body{
+  font-size: 15px;
+  line-height: 1.5;
+  padding:;
+  margin:0;
+  background-color:#ffffff;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:50px;
+}
+
+/*
+img {
+  opacity: 0.8;
+  filter: alpha(opacity=50);
+  transition: 1.5s ease;
+}
+
+img:hover {
+  opacity: 1.0;
+  filter: alpha(opacity=100);
+}
+*/
+
+div.Text {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #9DB24B;
+  opacity:0.6;
+  filter: alpha(opacity=60);
+  transition: .5s ease;
+  font-family: Marker Felt;
+}
+
+#Newsletter{
+  padding:1px;
+  color:#886639;
+  background:#ffffff;
+  font-size: 1px;
+  opacity:0.9;
+  filter: alpha(opacity=60);
+  transition: .5s ease;
+}
+
+#Newsletter h1{
+  float:left;
+  margin-left:15px;
+}
+
+#Newsletter form{
+  float:right;
+  margin-top:20px;
+  margin-right:15px;
+}
+
+#Newsletter input[type="text]"]{
+  input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+}
+
+
+.btn {
+background-color: #48341C;
+border: #ffffff;
+color: #ffffff;
+padding: 5px 15px;
+text-align: center;
+font-size: 10px;
+margin: 4px 2px;
+opacity: 0.6;
+transition: 0.3s;
+}
+
+.btn:hover {opacity: 1}
+
+#boxes{
+  margin-top:25px;
+  margin-left: 50px;
+  margin-right: 50px;
+
+}
+
+#boxes .box{
+  font-size: 20px;
+  float:center;
+  text-align:center;
+  width:100%;
+  padding:20px;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 20px;
+  width: 10px;
+  text-align: center;
+  text-decoration: none;
+  border-radius:40%
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: none;
+  color: #886639;
+  text-align: left;
+  font-size:10px;
 }
